# django-snacks

./: README.md  pyproject.toml
snacks_project/: db.sqlite3
snacks_project/snacks/: tests.py  views.py
snacks_project/snacks_project/: settings.py
snacks_project/templates/: _base.html  about_us.html  home.html
